<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="wrong_login">Check e-mail and password</string>
    <string name="app_name">WG4U</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_text">or sign up here!</string>
    <string name="first_name">Surname</string>
    <string name="name">Lastname</string>
    <string name="e_mail">e-mail</string>
    <string name="birthday">Birthday</string>
    <string name="sign_up">sign up!</string>
    <string name="new_user_success">You successfully singed up for WG4U!</string>
    <string name="user_name">User</string>
    <string name="login">Login</string>
    <string name="short_password">Chosen password is too short (min. 8 characters)!</string>
    <string name="no_password_match">The passwords dont match!</string>
    <string name="bday_format_error">Check the birthday!</string>
    <string name="empty_Fields">Please fill in each field!</string>
    <string name="user_exists">User already exists</string>
    <string name="mail_not_valid">Invalid mail address</string>
    <string name="found_wg">Found new WG</string>
    <string name="join_wg">Join existing WG</string>
    <string name="next">Next</string>
    <string name="wg_founding">WG founding</string>
    <string name="wg_name">WG name</string>
    <string name="zip_code">ZIP Code</string>
    <string name="country">Country</string>
    <string name="street">Street</string>
    <string name="hnr">Number</string>
    <string name="town">Town</string>
    <string name="description">Description</string>
    <string name="search_your_wg">Search here for your WG</string>
    <string name="wg_search">WG search</string>
    <string name="wg_password">Set a WG-password</string>
    <string name="placeholder_wg_name">Placeholder WG name</string>
    <string name="todo_list">ToDo list</string>
    <string name="shopping_list">Shopping list</string>
    <string name="cleaning_plan">Cleaning plan</string>
    <string name="journal">Journal</string>
    <string name="describe_wg">Tell us something about your WG!</string>
    <string name="wg_exists">This name is already taken, choose a different one!</string>
    <string name="search">Search</string>
    <string name="no_result">No result</string>
    <string name="join">Join</string>
    <string name="check_password">Check WG-password</string>
    <string name="calender">Calender</string>
    <string name="user_details">User details</string>
    <string name="create_appointment">New Task</string>
    <string name="date">Date (DD/MM/YYYY)</string>
    <string name="appointment_description">Take a note</string>
    <string name="safe">Safe</string>
    <string name="check_date">Check date</string>
    <string name="task_on">"Tasks on "</string>
    <string name="set_date">Date</string>
    <string name="set_Time">Time</string>
    <string name="name_required">A name is required</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="wg_details">WG details</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="delete_wg">Delete WG</string>
    <string name="Add">Add</string>
    <string name="add_a_new_product">Add a new product…</string>
    <string name="plus_symbol" translatable="false">+</string>
    <string name="add_a_new_task">Add a new task…</string>
    <string name="appointment_details">Appointment details</string>
    <string name="appointment_Name">Name</string>
    <string name="appointment_Note">Note</string>
    <string name="appointment_Time">Time</string>
    <string name="appointment_Date">Date</string>
    <string name="delete">Delete</string>
    <string name="edit_appointment">Edit Task</string>
    <string name="leaveWG">Leave WG</string>
    <string name="check_input">Error, check the input</string>
    <string name="error_delete">Error while deleting entry</string>
    <string name="Journal">Journal</string>
    <string name="say_something">say something!</string>

</resources>
