<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context=".CreateAppointmentActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/newTaskTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/create_appointment"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textAlignment="center"/>
    </RelativeLayout>

    <EditText
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="Name"
        android:layout_gravity="center"
        android:id="@+id/appointmentNameEditText"
        android:layout_margin="8dp"
        tools:ignore="Autofill"
        android:inputType="textVisiblePassword"
        />



    <EditText
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/appointment_description"
        android:layout_gravity="center"
        android:inputType="textVisiblePassword"
        android:id="@+id/appointmentDescriptionEditText"
        tools:ignore="Autofill"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginLeft="30dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginVertical="30dp"
                android:text="@string/set_date"
                android:onClick="onClickDate"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginRight="30dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginVertical="30dp"
                android:text="@string/set_Time"
                android:onClick="onClickTime"/>

        </RelativeLayout>



    </LinearLayout>



    />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="0dp"
        android:layout_gravity="center"
        android:text="@string/safe"
        android:onClick="onClickSafe"/>


</LinearLayout>