<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/button_add_item"
>

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            android:text="@string/shopping_list"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold" />

            <ListView
            android:id="@+id/view_shopping_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="32dp" />

    </LinearLayout>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input_item"
        android:hint="@string/add_a_new_product"
        tools:ignore="Autofill"

        android:layout_alignParentStart="true"

        android:layout_toStartOf="@+id/button_add_item"
        android:layout_alignParentBottom="true"
        android:inputType="text" />

    <Button
        android:id="@+id/button_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:onClick="onClick"
        android:text="@string/plus_symbol" />

</RelativeLayout>